<resources>
    <string name="app_name">madProject</string>

    <string name="btn1">Add Course</string>
    <string name="btn2">Add Exam</string>
    <string name="btn3">View Result</string>
    <string name="add_new_course">Add New Course</string>
    <string name="add_new_exam">Add New Exam</string>
    <string name="add_new_result">Add New Result</string>
    <string name="textView12">Workout</string>
    <string name="txtWalk">Walking</string>
    <string name="txtRun">Running</string>
    <string name="txtCycle">Cycling</string>
    <string name="txtSwim">Swimming</string>
    <string name="btnadd">Add</string>
    <string name="btnview">View</string>
    <string name="btndone">Done</string>
    <string name="textView13">Walking Workout</string>
    <string name="share">Share</string>
    <string name="findfr">Find Friends</string>
    <string name="feed">View Feed</string>
    <string name="Serach">Find Your Friends and Collegues</string>
    <string name="sharestatus">Share your Activities with Others</string>
    <string name="Viewothers">View what your friends are doing</string>
    <string name="comtext">Welcome to the Community!  </string>
    <string name="comdescription">This feed is created to share your activities among your collegues.So enjoy it!</string>
    <string name="timetable">TimeTables</string>
    <string name="nocourse">No Course Added Yet</string>
    <string name="noexam">No Exam Added yet</string>
    <string name="noresults">No Results Viewed yet</string>
    <string name="addcourse">Add Courses</string>
    <string name="addexam">Add Exams</string>
    <string name="addresults">View Results</string>
    <string name="workouthome">Workouts</string>
    <string name="walkhome">Walking Workout</string>
    <string name="addplan">Add Plan</string>
    <string name="addplandes">Add Workout Planing..!</string>
    <string name="viewplan">View Plan</string>
    <string name="viewplandes">View the previously added workout plans..!</string>
    <string name="plandone">Donned Workouts</string>
    <string name="plandonedes">Plans which were done in the past..!</string>
    <string name="walkworkouttitle">Walking Exercises</string>
    <string name="walkworkoutdes">Walking is great exercise and can be very beneficial aerobically.</string>
    <string name="runhome">Running Workout</string>
    <string name="runworkouttitle">Running Exercises</string>
    <string name="runworkoutdes">As a form of aerobic exercise, running can reduce stress, improve heart health, and even help alleviate symptoms of depression.</string>
    <string name="cyclehome">Cycling Workout</string>
    <string name="cycleworkouttitle">Cycling Exercises</string>
    <string name="cycleworkoutdes">Cycling is easy to fit into your daily routine by riding to the shops, park, school or work.</string>
    <string name="swimhome">Swimming Workout</string>
    <string name="swimworkouttitle">Swimming Exercises</string>
    <string name="swimworkoutdes">Swimming is the self-propulsion of a person through water, usually for recreation, sport, exercise, or survival.</string>
    <string name="searchfr">Lets Search Your Friends!</string>


    <string name="input1">Plan Name:</string>
    <string name="input2">StartingPoint:</string>
    <string name="input3">Destination:</string>
    <string name="input4">StartingTime</string>
    <string name="input5">EndDate</string>
    <string name="inputST">Time</string>
    <string name="inputET">Time</string>
    <string name="HHoliday">Holiday Planing</string>
    <string name="Plan">Planning</string>
    <string name="todo">Work ToDo</string>
    <string name="memories">Memories</string>
    <string name="view">View WorkToDo</string>
    <string name="plan1">Plan1</string>
    <string name="plan2">Plan2</string>
    <string name="plan3">Plan3</string>
    <string name="CAL">Starting Date:</string>
    <string name="calview">Your date</string>
    <string name="enddate">Ending Date</string>
    <string name="endtextview">Your date</string>
    <string name="addworkoutplan">Add Workout Plan</string>
    <string name="addWorkoutName">Enter Workout name :</string>
    <string name="addstarttime">Starting Time :</string>
    <string name="addendtime">Ending Time :</string>
    <string name="adddistance">Distance :</string>
    <string name="viewworkoutplan">View Workout Plan</string>
    <string name="viewdes">All of Your Plans will be displaying in here..!</string>
    <string name="btnupdate">UPDATE</string>
    <string name="btndelete">DELETE</string>
    <string name="btnworkdone">DONE</string>
    <string name="title_activity_donned_workout">donnedWorkout</string>
    <string name="donnedworkoutplan">Donned Workouts</string>
    <string name="subject">Enter a Subject</string>
    <string name="teacher">Enter Teachers Name</string>
    <string name="place">Enter a Place</string>
    <string name="datetime"><![CDATA[Enter Date & Time]]></string>
    <string name="coursewelcome">Welcome</string>
    <string name="coursedes">Start with creating a new course!
    or check out the View to enable multiple weeks and change the  default course time.</string>
    <string name="examname">Enter Exam Name</string>
    <string name="congrats">Congratulations</string>
    <string name="examdes">Do yoy best!</string>
    <string name="goodluck">Good Luck For Your Exam</string>
    <string name="examcongrat">Congratulations on your excellent success and good luck for more progress. I have complete faith that you’ll pass your exam with good score.</string>
    <string name="timetablehome">Managing your school or university life. Save your timetable and all tasks from courses to exams.</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="loginwelcome">Welcome Back !</string>
    <string name="logusername">Username</string>
    <string name="uname">Username</string>
    <string name="btnlogin">Login</string>
    <string name="sharetitle" />
    <string name="shareact">share</string>
    <string name="sharediscript" />
    <string name="sharedescription">Now you can share your activities with others</string>
    <string name="Fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="Email" />
    <string name="EmailN">Email</string>
    <string name="phoneno">Phone</string>
    <string name="signupbt">SignUp</string>
    <string name="planholiday">Plan and Shedule What are you going to do in your holidays</string>
    <string name="Slocation">StartingLocation:</string>
    <string name="Elocation">Destination:</string>
    <string name="MEMORIES1">DONE_WORKOUT1</string>
    <string name="memo1">DoneWork1</string>
    <string name="memo2">DoneWork2</string>
    <string name="memo3">DoneWork3</string>
    <string name="MEMO">Memories</string>
    <string name="workouttitle">Necessary Workouts</string>
    <string name="workoutdes">Exercising causes the body to make chemicals that can help a person to feel good.</string>
    <string name="addplanbtn">ADD</string>
    <string name="clearviewbtn">CLEAR</string>
    <string name="holidayplan">Holiday Planing</string>
    <string name="hintworkoutname">Enter a Workout Name</string>
    <string name="hintstarttime">Enter a Start time</string>
    <string name="hintendtime">Enter a End Time</string>
    <string name="hintdist">Enter a Distance</string>

    <string name="UpadteAC">UPDATE</string>
    <string name="ViewAC">View Course Plan</string>
    <string name="coursehomepage">Course</string>
    <string name="viewcourseAc">View Course</string>
    <string name="timeAC">Select Time</string>
    <string name="dataAC">Select Date</string>
    <string name="viewexam">View Exam</string>
    <string name="xammmm">Exam</string>
    <string name="exam">Exam View</string>
    <string name="addbtn">ADD</string>

    <string name="Search">SEARCH</string>
    <string name="sbtn">SEARCH</string>
    <string name="dis">DISCRIPTION</string>
    <string name="Dis">Discription</string>

    <string name="starttime">*</string>
    <string name="endtimea">*</string>
    <string name="title_activity_blogfeed">blogfeed</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="buttondel">Deleted</string>
    <string name="btndel">Delete</string>
</resources>
